Sửa lại chính tả, format About

--- a/assets/css/addStyle.css
+++ b/assets/css/addStyle.css
@@ -42,3 +42,6 @@
     background-clip: text !important;
     -webkit-background-clip: text !important;
 }
+.paragraph {
+    white-space: pre-wrap;
+}
