--- a/assets/css/addStyle.css
+++ b/assets/css/addStyle.css
@@ -1,5 +1,9 @@
 .btn-modify:hover {
-    background-image: linear-gradient(110deg, #16a085 30%, #3ba5d3 70% ) !important;
+    background-image: linear-gradient(
+        110deg,
+        #16a085 30%,
+        #3ba5d3 70%
+    ) !important;
     color: #fff;
     border: #16a085 solid 2px;
 }
@@ -9,7 +13,7 @@
     font-weight: 500 !important;
 }
 .long-space {
-    margin-left: 50px; 
+    margin-left: 50px;
     display: inline-block;
     color: rgb(14, 171, 145) !important;
     font-size: 1.5rem;
@@ -42,6 +46,15 @@
     background-clip: text !important;
     -webkit-background-clip: text !important;
 }
+.para-block {
+    width: 100%;
+    white-space: pre;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
 .paragraph {
     white-space: pre-wrap;
+    
 }
+
+
